Remove Stadium Checksums
Co-Authored-By: vulcandth <6394873+vulcandth@users.noreply.github.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -11,8 +11,7 @@ tools := \
 	png_dimensions \
 	pokemon_animation \
 	pokemon_animation_graphics \
-	scan_includes \
-	stadium
+	scan_includes
 
 all: $(tools)
 	@:
